# fm

./: Cargo.toml  README.md  debug  test
src/lib/: app.rs  file.rs  filetype.rs  helpers.rs  lib.rs  permissions.rs  previews.rs  ui.rs  userinput.rs  workingdir.rs
src/lib/userinput/: copy_file.rs  create_file.rs  delete_file.rs  input.rs  mod.rs  rename_file.rs  search.rs
