[package]
name = "fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fm"
path = "src/bin/fm.rs"

[lib]
name = "fm"
path = "src/lib/lib.rs"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
tui = { version = "0.14", default-features = false, features = [ "crossterm", "serde" ] }
anyhow = "1.0.44"
serde_yaml = "0.8.21"

